--- a/menu-responsivo/css3/estilo.css
+++ b/menu-responsivo/css3/estilo.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet');
+
 * {
     margin: 0;
     padding: 0;
@@ -5,13 +7,27 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 65%;
+}
+
 html,
 body {
     height: 100%;
 }
 
+body {
+    font-size: 1.5rem;
+}
+
 header {
-    background: linear-gradient(90deg, #07c792, #359d9e);
+    background: linear-gradient(60deg, #2fb306, #28282a);
+}
+
+.logo h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    font-size: 3.1rem;
 }
 
 header .container {
@@ -31,13 +47,42 @@ nav ul {
 
 nav ul li {
     list-style: none;
-    
+
 }
 
-nav ul li a{
+nav ul li a {
     text-decoration: none;
     color: #f8f9f9;
-    font-size: 20px;
+    font-size: 2.1rem;
     margin-left: 40px;
-    
+    font-family: Arial, Helvetica, sans-serif;
+    align-items: center;
+
+}
+
+@media(max-width: 964px) {
+
+    html {
+
+        font-size: 50%;
+
+    }
+}
+
+@media(max-width: 809px) {
+
+    html {
+
+        font-size: 40%;
+
+    }
+}
+
+@media(max-width: 709px) {
+
+    nav {
+
+        display: none;
+
+    }
 }
