--- a/menu-responsivo/css3/estilo.css
+++ b/menu-responsivo/css3/estilo.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet');
-
 * {
     margin: 0;
     padding: 0;
@@ -21,7 +19,7 @@ body {
 }
 
 header {
-    background: linear-gradient(60deg, #2fb306, #28282a);
+    background: linear-gradient(90deg, #2fb306, #28282a);
 }
 
 .logo h1 {
@@ -54,10 +52,16 @@ nav ul li a {
     text-decoration: none;
     color: #f8f9f9;
     font-size: 2.1rem;
+    padding: 6px 10px;
     margin-left: 40px;
     font-family: Arial, Helvetica, sans-serif;
     align-items: center;
 
+}
+
+nav ul li a:hover {
+    background-color: dimgray;
+    transition: 0.3s;
 }
 
 @media(max-width: 964px) {
@@ -83,6 +87,77 @@ nav ul li a {
     nav {
 
         display: none;
+    }
+
+    .one,
+    .two,
+    .three {
+        background-color: white;
+        height: 7px;
+        width: 100%;
+        margin: 6px auto;
+        transition-duration: 0.03s;
+        
 
     }
+
+    .menu-burguer {
+        width: 40px;
+        height: 30px;
+    }
+
+
+}
+
+.menu-section.on {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(150deg, #2fb306, #28282a);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
+}
+
+.menu-section.on nav {
+    display: block;
+}
+
+.menu-section.on .menu-burguer {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+}
+
+.menu-section.on .menu-burguer .one {
+    transform: rotate(45deg)translate(7px, 7px);
+}
+
+.menu-section.on .menu-burguer .two {
+    opacity: 0;
+}
+
+.menu-section.on .menu-burguer .three {
+    transform: rotate(-45deg)translate(12px, -12px);
+}
+
+.menu-section.on nav ul {
+
+    display: block;
+    text-align: center;
+
+}
+
+.menu-section.on nav ul li a {
+
+    transition-duration: 0.03s;
+    font-size: 6rem;
+    line-height: 15rem;
+    margin-left: 0;
+
+
 }
